// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/commodore/index extractPackageFile() extracts component and package urls for version pins 1`] = `
[
  {
    "currentValue": "v3.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 4/pins.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.2.3",
    "datasource": "github-releases",
    "depName": "component-argocd in 4/pins.yml",
    "packageName": "projectsyn/component-argocd",
  },
  {
    "currentValue": "v0.9.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 4/pins.yml",
    "packageName": "projectsyn/package-monitoring",
  },
]
`;

exports[`src/commodore/index extractPackageFile() extracts component and package urls for version pins in tenant repo 1`] = `
[
  {
    "currentValue": "v3.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 5/tenant/c-foo.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.2.3",
    "datasource": "github-releases",
    "depName": "component-argocd in 5/tenant/c-foo.yml",
    "packageName": "projectsyn/component-argocd",
  },
  {
    "currentValue": "v0.9.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 5/tenant/c-foo.yml",
    "packageName": "projectsyn/package-monitoring",
  },
]
`;

exports[`src/commodore/index extractPackageFile() extracts component and package versions 1`] = `
[
  {
    "currentValue": "v1.1.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 1/params.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud2 in 1/params.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.0.0",
    "datasource": "github-releases",
    "depName": "component-argocd in 1/params.yml",
    "packageName": "projectsyn/component-argocd",
  },
  {
    "currentValue": "v2.1.0",
    "datasource": "github-releases",
    "depName": "component-backup-k8up in 1/params.yml",
    "packageName": "projectsyn/component-backup-k8up",
  },
  {
    "currentValue": "v1.0.0",
    "datasource": "github-releases",
    "depName": "component-kyverno in 1/params.yml",
    "packageName": "projectsyn/component-kyverno",
  },
  {
    "currentValue": "v2.2.0",
    "datasource": "github-releases",
    "depName": "component-lieutenant in 1/params.yml",
    "packageName": "projectsyn/component-lieutenant",
  },
  {
    "currentValue": "v2.2.0",
    "datasource": "git-refs",
    "depName": "component-foo-test in 1/params.yml",
    "packageName": "https://gitlab.com/projectsyn/component-foo-test.git",
  },
  {
    "currentValue": "v1.0.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 1/params.yml",
    "packageName": "projectsyn/package-monitoring",
  },
]
`;

exports[`src/commodore/index extractPackageFile() generates valid Commodore parameters for clusters with no dynamic facts 1`] = `
[
  {
    "currentValue": "v3.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 5/tenant/c-foo-4.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.2.3",
    "datasource": "github-releases",
    "depName": "component-argocd in 5/tenant/c-foo-4.yml",
    "packageName": "projectsyn/component-argocd-k3d",
  },
  {
    "currentValue": "v0.9.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 5/tenant/c-foo-4.yml",
    "packageName": "projectsyn/package-k3d-monitoring",
  },
]
`;

exports[`src/commodore/index extractPackageFile() proceeds without cluster info on 404 1`] = `
[
  {
    "currentValue": "v3.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 5/tenant/c-foo-3.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.2.3",
    "datasource": "github-releases",
    "depName": "component-argocd in 5/tenant/c-foo-3.yml",
    "packageName": "projectsyn/component-argocd",
  },
  {
    "currentValue": "v0.9.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 5/tenant/c-foo-3.yml",
    "packageName": "projectsyn/package-monitoring",
  },
]
`;

exports[`src/commodore/index extractPackageFile() uses cluster info returned by Lieutenant 1`] = `
[
  {
    "currentValue": "v3.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 5/tenant/c-foo-2.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.2.3",
    "datasource": "github-releases",
    "depName": "component-argocd in 5/tenant/c-foo-2.yml",
    "packageName": "projectsyn/component-argocd-k3d",
  },
  {
    "currentValue": "v0.9.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 5/tenant/c-foo-2.yml",
    "packageName": "projectsyn/package-k3d-monitoring",
  },
]
`;

exports[`src/commodore/index extractPackageFile() uses facts from factsMap 1`] = `
[
  {
    "currentValue": "v3.0.0",
    "datasource": "github-releases",
    "depName": "component-appuio-cloud in 5/tenant/test.yml",
    "packageName": "appuio/component-appuio-cloud",
  },
  {
    "currentValue": "v1.2.3",
    "datasource": "github-releases",
    "depName": "component-argocd in 5/tenant/test.yml",
    "packageName": "projectsyn/component-argocd-k3d",
  },
  {
    "currentValue": "v0.9.0",
    "datasource": "github-releases",
    "depName": "package-monitoring in 5/tenant/test.yml",
    "packageName": "projectsyn/package-k3d-monitoring",
  },
]
`;
